Kubernetes/Project2/pgAdmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  labels:
    app: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  # Snippet for the Pod
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
      - name: pgadmin
        image: dpage/pgadmin4:snapshot
        ports:
        - containerPort: 80
        # Snippet for the secret:
---
# Snippet for the service:
apiVersion: v1
kind: Service
metadata:
  name: postgres-ingress-service
spec:
  selector:
    app: pgadmin
  ports:
    - protocol: TCP
      port: 5050
      targetPort: 5050
