Kubernetes/Project2/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    app: postgresdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresdb
  # Snippet for the Pod
  template:
    metadata:
      labels:
        app: postgresdb
    spec:
      containers:
      - name: postgresdb
        image: postgres:15.3
        ports:
        - containerPort: 5432
        # Snippet for the secret:
---
# Snippet for the service:
apiVersion: v1
kind: Service
metadata:
  name: postgresdb-service
spec:
  selector:
    app: postgresdb
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
