Kubernetes/Project2/ingress-http.yaml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: pgadmin-ingress
  # Routing rules: States that all traffic coming to myapp.com should be routed to the myapp-internal-service
  # Note
  # - the domain myapp.com must be valid
  # - the domain must be mapped to  Nodes's IP address,which is entry point to the cluster/server
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "mypgadmin.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: "postgres-ingress-service"
            port:
             number: 5050
